--- a/scripts/amrfinder/ESCrE_genotype_curation.html
+++ b/scripts/amrfinder/ESCrE_genotype_curation.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-31" />
+<meta name="date" content="2025-11-03" />
 
 <title>Curate ESCrE genotype information for downstream analyses</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Curate ESCrE genotype information for
 downstream analyses</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-31</h4>
+<h4 class="date">2025-11-03</h4>
 
 </div>
 
@@ -600,7 +600,7 @@ Sys.info()</code></pre>
 ##                                                                                                     version 
 ## &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
 ##                                                                                                    nodename 
-##                                                                               &quot;msla0572.wifi.med.umich.edu&quot; 
+##                                                                                            &quot;msla0572.local&quot; 
 ##                                                                                                     machine 
 ##                                                                                                    &quot;x86_64&quot; 
 ##                                                                                                       login 
@@ -947,10 +947,10 @@ cephalosporin-hydrolyzing class C beta-lactamase ACT-16
 CEPHALOSPORIN
 </td>
 <td style="text-align:right;">
-3
+4
 </td>
 <td style="text-align:right;">
-1.79
+2.38
 </td>
 <td style="text-align:left;">
 C
@@ -1577,10 +1577,10 @@ extended-spectrum class A beta-lactamase CTX-M-15
 CEPHALOSPORIN
 </td>
 <td style="text-align:right;">
-66
+67
 </td>
 <td style="text-align:right;">
-39.29
+39.88
 </td>
 <td style="text-align:left;">
 A
@@ -1752,10 +1752,10 @@ BlaEC family class C beta-lactamase
 BETA-LACTAM
 </td>
 <td style="text-align:right;">
-60
+61
 </td>
 <td style="text-align:right;">
-35.71
+36.31
 </td>
 <td style="text-align:left;">
 C
@@ -1822,10 +1822,10 @@ BlaEC family class C beta-lactamase
 BETA-LACTAM
 </td>
 <td style="text-align:right;">
-6
+7
 </td>
 <td style="text-align:right;">
-3.57
+4.17
 </td>
 <td style="text-align:left;">
 C
@@ -1962,10 +1962,10 @@ carbapenem-hydrolyzing class A beta-lactamase KPC-3
 CARBAPENEM
 </td>
 <td style="text-align:right;">
-8
+9
 </td>
 <td style="text-align:right;">
-4.76
+5.36
 </td>
 <td style="text-align:left;">
 A
@@ -2452,10 +2452,10 @@ broad-spectrum class A beta-lactamase TEM-1
 BETA-LACTAM
 </td>
 <td style="text-align:right;">
-60
+61
 </td>
 <td style="text-align:right;">
-35.71
+36.31
 </td>
 <td style="text-align:left;">
 A
