--- a/scripts/dataset_curation/MERLIN_remove_duplicates.html
+++ b/scripts/dataset_curation/MERLIN_remove_duplicates.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-31" />
+<meta name="date" content="2025-11-03" />
 
 <title>Data Cleaning Step 4 - Remove duplicates</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Data Cleaning Step 4 - Remove
 duplicates</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-31</h4>
+<h4 class="date">2025-11-03</h4>
 
 </div>
 
@@ -599,7 +599,7 @@ Sys.info()</code></pre>
 ##                                                                                                     version 
 ## &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
 ##                                                                                                    nodename 
-##                                                                               &quot;msla0572.wifi.med.umich.edu&quot; 
+##                                                                                            &quot;msla0572.local&quot; 
 ##                                                                                                     machine 
 ##                                                                                                    &quot;x86_64&quot; 
 ##                                                                                                       login 
@@ -860,13 +860,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -964,13 +964,13 @@ TRUE
 Escherichia
 </td>
 <td style="text-align:left;">
+Escherichia coli ST 38
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Escherichia coli ST 38
 </td>
 </tr>
 <tr>
@@ -1066,13 +1066,13 @@ TRUE
 Escherichia
 </td>
 <td style="text-align:left;">
+Escherichia coli ST 38
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Escherichia coli ST 38
 </td>
 </tr>
 </tbody>
@@ -1198,13 +1198,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -1302,13 +1302,13 @@ TRUE
 Escherichia
 </td>
 <td style="text-align:left;">
+Escherichia coli ST 1193
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Escherichia coli ST 1193
 </td>
 </tr>
 <tr>
@@ -1404,13 +1404,13 @@ TRUE
 Escherichia
 </td>
 <td style="text-align:left;">
+Escherichia coli ST 1193
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Escherichia coli ST 1193
 </td>
 </tr>
 </tbody>
@@ -1536,13 +1536,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -1640,13 +1640,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 1243
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 1243
 </td>
 </tr>
 <tr>
@@ -1742,13 +1742,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 1243
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex;9200_LL_PurePlex_test
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 1243
 </td>
 </tr>
 </tbody>
@@ -1874,13 +1874,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -1978,13 +1978,13 @@ TRUE
 Escherichia
 </td>
 <td style="text-align:left;">
+Escherichia coli ST 131
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex
-</td>
-<td style="text-align:left;">
-Escherichia coli ST 131
 </td>
 </tr>
 <tr>
@@ -2080,13 +2080,13 @@ TRUE
 Escherichia
 </td>
 <td style="text-align:left;">
+Escherichia coli ST 131
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Escherichia coli ST 131
 </td>
 </tr>
 </tbody>
@@ -2212,13 +2212,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -2317,13 +2317,13 @@ TRUE
 Citrobacter
 </td>
 <td style="text-align:left;">
+Citrobacter portucalensis ST 13
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Citrobacter portucalensis ST 13
 </td>
 </tr>
 <tr>
@@ -2420,13 +2420,13 @@ TRUE
 Citrobacter
 </td>
 <td style="text-align:left;">
+Citrobacter portucalensis ST 13
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Citrobacter portucalensis ST 13
 </td>
 </tr>
 </tbody>
@@ -2552,13 +2552,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -2656,13 +2656,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 45
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 45
 </td>
 </tr>
 <tr>
@@ -2758,13 +2758,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 45
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 45
 </td>
 </tr>
 </tbody>
@@ -2796,7 +2796,7 @@ paste0(&quot;Enterobacter hormaechei&quot;)</code></pre>
 <pre><code>## [1] &quot;Enterobacter hormaechei&quot;</code></pre>
 <pre class="r"><code>MERLIN_13_MERLIN_19_ehormaechei &lt;- MERLIN_13_MERLIN_19 %&gt;% subset(Species == &#39;Enterobacter hormaechei&#39;) %&gt;% .$Sample
 
-MERLIN_13_MERLIN_19_mapname &lt;- subset(metadata,metadata$genomic_id ==  duplicates[7]) %&gt;% .$map_name %&gt;% unique
+MERLIN_13_MERLIN_19_mapname &lt;- subset(metadata,metadata$genomic_id ==  &quot;MERLIN_13;MERLIN_19&quot;) %&gt;% .$map_name %&gt;% unique
 
 metadata$genomic_id &lt;- ifelse(metadata$map_name == MERLIN_13_MERLIN_19_mapname &amp; metadata$maldi==&#39;Citrobacter freundii&#39;,MERLIN_13_MERLIN_19_cfreundii,metadata$genomic_id)
 metadata$genomic_id &lt;- ifelse(metadata$map_name == MERLIN_13_MERLIN_19_mapname &amp; metadata$maldi==&#39;Enterobacter hormaechei&#39;,MERLIN_13_MERLIN_19_ehormaechei,metadata$genomic_id)</code></pre>
@@ -2918,13 +2918,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -3022,13 +3022,13 @@ TRUE
 Enterobacter
 </td>
 <td style="text-align:left;">
+Enterobacter ludwigii ST 1287
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex;9200_LL_PurePlex_test
-</td>
-<td style="text-align:left;">
-Enterobacter ludwigii ST 1287
 </td>
 </tr>
 <tr>
@@ -3124,13 +3124,13 @@ TRUE
 Enterobacter
 </td>
 <td style="text-align:left;">
+Enterobacter ludwigii ST 1287
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Enterobacter ludwigii ST 1287
 </td>
 </tr>
 </tbody>
@@ -3256,13 +3256,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -3360,13 +3360,13 @@ TRUE
 Escherichia
 </td>
 <td style="text-align:left;">
+Escherichia coli ST 131
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 11270-ES
-</td>
-<td style="text-align:left;">
-Escherichia coli ST 131
 </td>
 </tr>
 <tr>
@@ -3462,13 +3462,13 @@ TRUE
 Escherichia
 </td>
 <td style="text-align:left;">
+Escherichia coli ST 131
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Escherichia coli ST 131
 </td>
 </tr>
 </tbody>
@@ -3597,13 +3597,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -3701,13 +3701,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 15
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 15
 </td>
 </tr>
 <tr>
@@ -3803,13 +3803,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 15
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex;9200_LL_PurePlex_test
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 15
 </td>
 </tr>
 </tbody>
@@ -3935,13 +3935,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -4039,13 +4039,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 323
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 323
 </td>
 </tr>
 <tr>
@@ -4141,13 +4141,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 323
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 323
 </td>
 </tr>
 </tbody>
@@ -4273,13 +4273,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -4377,13 +4377,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 14
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex;9200_LL_PurePlex_test
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 14
 </td>
 </tr>
 <tr>
@@ -4479,13 +4479,13 @@ TRUE
 Klebsiella
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 14
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex;9200_LL_PurePlex_test
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 14
 </td>
 </tr>
 </tbody>
@@ -4612,13 +4612,13 @@ qc_pass
 Genus
 </th>
 <th style="text-align:left;">
+Species_ST
+</th>
+<th style="text-align:left;">
 WGS_escre
 </th>
 <th style="text-align:left;">
 sequencing_run
-</th>
-<th style="text-align:left;">
-Species_ST
 </th>
 </tr>
 </thead>
@@ -4716,13 +4716,13 @@ TRUE
 Citrobacter
 </td>
 <td style="text-align:left;">
+Citrobacter freundii ST Unknown
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL;9200-LL_PurePlex;9200_LL_PurePlex_test
-</td>
-<td style="text-align:left;">
-Citrobacter freundii ST Unknown
 </td>
 </tr>
 <tr>
@@ -4818,13 +4818,13 @@ TRUE
 Citrobacter
 </td>
 <td style="text-align:left;">
+Citrobacter freundii ST Unknown
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 9200-LL
-</td>
-<td style="text-align:left;">
-Citrobacter freundii ST Unknown
 </td>
 </tr>
 <tr>
@@ -4920,13 +4920,13 @@ TRUE
 Citrobacter
 </td>
 <td style="text-align:left;">
+Citrobacter freundii ST Unknown
+</td>
+<td style="text-align:left;">
 TRUE
 </td>
 <td style="text-align:left;">
 11270-ES
-</td>
-<td style="text-align:left;">
-Citrobacter freundii ST Unknown
 </td>
 </tr>
 </tbody>
@@ -4948,7 +4948,10 @@ paste0(&quot;Number of genomic_id duplicates remaining: &quot;,num_remaining_dup
 <pre><code>## [1] &quot;Remaining genomic_id values to deal with: &quot;</code></pre>
 <pre class="r"><code>if (num_remaining_duplicates &gt; 0) {
   stop(&quot;Did not deal with a duplicate. Fix.&quot;) 
-} </code></pre>
+} else {
+  message(&quot;Good job, all genomic_id duplicates resolved&quot;)
+}</code></pre>
+<pre><code>## Good job, all genomic_id duplicates resolved</code></pre>
 </div>
 </div>
 <div id="curate-the-final-genomic_id-variable" class="section level1">
