--- a/scripts/mobsuite/curate_mobsuite.html
+++ b/scripts/mobsuite/curate_mobsuite.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-31" />
+<meta name="date" content="2025-11-03" />
 
 <title>Plasmid curation via MOB-Suite</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">Plasmid curation via MOB-Suite</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-31</h4>
+<h4 class="date">2025-11-03</h4>
 
 </div>
 
@@ -364,6 +364,7 @@ packages &lt;- c(&quot;tidyverse&quot;)
 
 #Load Packages
 invisible(lapply(packages,library,character.only=T,quietly=T))
+
 # Functions
 source(&quot;./scripts/mobsuite/mobsuite_functions.R&quot;)
 
@@ -377,7 +378,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
+                                                                                           &quot;msla0572.local&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -420,8 +421,8 @@ loaded via a namespace (and not attached):
 [29] vctrs_0.6.5        evaluate_1.0.5     glue_1.8.0         farver_2.1.2      
 [33] rmarkdown_2.29     tools_4.5.1        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
 </div>
-<div id="load-data" class="section level1">
-<h1>Load data</h1>
+<div id="load-dataset" class="section level1">
+<h1>Load dataset</h1>
 </div>
 <div id="curate-mobsuite-data" class="section level1">
 <h1>Curate mobsuite data</h1>
