--- a/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
+++ b/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-31" />
+<meta name="date" content="2025-11-03" />
 
 <title>Results Section 4: Sharing of ESCrEs provides additional support for prolonged colonization</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">Results Section 4: Sharing of ESCrEs
 provides additional support for prolonged colonization</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-31</h4>
+<h4 class="date">2025-11-03</h4>
 
 </div>
 
@@ -379,7 +379,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
+                                                                                           &quot;msla0572.local&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -3251,16 +3251,22 @@ Escherichia coli ST 131 Cluster 7
 3
 </td>
 <td style="text-align:left;">
+AA171;AA174
 </td>
 <td style="text-align:left;">
+blaCTX-M-15;blaEC-5*
 </td>
 <td style="text-align:left;">
+blaCTX-M-15;blaEC-5*
 </td>
 <td style="text-align:left;">
+blaCTX-M-15
 </td>
 <td style="text-align:left;">
+blaCTX-M-15;blaEC-5*
 </td>
 <td style="text-align:left;">
+blaCTX-M-15;blaEC-5*
 </td>
 <td style="text-align:left;">
 </td>
@@ -4127,9 +4133,9 @@ AA276
 <div id="summary-four-cases-where-prolonged-colonization-at-species-level-found-but-not-strain-level" class="section level1">
 <h1>Summary: Four cases where prolonged colonization at species-level
 found, but not strain-level</h1>
-<div id="one-case-was-different-sequence-type-but-not-shared-escre-gene-i.e.-acquisition" class="section level2">
-<h2>One case was different sequence type but not shared ESCrE gene
-(i.e., acquisition)</h2>
+<div id="one-case-was-different-sequence-type-but-no-shared-escre-gene-i.e.-likely-acquisition" class="section level2">
+<h2>One case was different sequence type but no shared ESCrE gene (i.e.,
+likely acquisition)</h2>
 [[1]]
 <table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
 <thead>
