--- a/scripts/tables/s_table_1_ESBL_plasmidic_location.html
+++ b/scripts/tables/s_table_1_ESBL_plasmidic_location.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-31" />
+<meta name="date" content="2025-11-03" />
 
-<title>Supplemental Table 1: Location of ESBL genes on short-read assemblies</title>
+<title>Supplemental Table 1: Location of ESCrE genes on short-read assemblies</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -574,10 +574,10 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Supplemental Table 1: Location of ESBL
+<h1 class="title toc-ignore">Supplemental Table 1: Location of ESCrE
 genes on short-read assemblies</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-31</h4>
+<h4 class="date">2025-11-03</h4>
 
 </div>
 
@@ -603,7 +603,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
+                                                                                           &quot;msla0572.local&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -818,13 +818,13 @@ blaCTX-M-15
 ESBL
 </td>
 <td style="text-align:right;">
-26
+27
 </td>
 <td style="text-align:right;">
 19
 </td>
 <td style="text-align:right;">
-42.22
+41.30
 </td>
 </tr>
 <tr>
@@ -1090,7 +1090,7 @@ blaEC-5*
 ampC-like
 </td>
 <td style="text-align:right;">
-39
+40
 </td>
 <td style="text-align:right;">
 0
@@ -1102,8 +1102,8 @@ ampC-like
 </tbody>
 </table>
 </div>
-<div id="save-table" class="section level1">
-<h1>Save table</h1>
+<div id="save-table-as-csv-and-rds-file" class="section level1">
+<h1>Save table as CSV and RDS file</h1>
 </div>
 
 
