--- a/scripts/ESBL_plasmids/generate_beta_lactam_presence_absence_data_MERLIN_cohort.html
+++ b/scripts/ESBL_plasmids/generate_beta_lactam_presence_absence_data_MERLIN_cohort.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-31" />
+<meta name="date" content="2025-11-03" />
 
 <title>Generate Beta-lactam presence and location data for full cohort</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Generate Beta-lactam presence and location
 data for full cohort</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-31</h4>
+<h4 class="date">2025-11-03</h4>
 
 </div>
 
@@ -603,7 +603,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
+                                                                                           &quot;msla0572.local&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -666,7 +666,8 @@ paste0(&quot;Total tested genomes: &quot;,nrow(df))</code></pre>
 </div>
 <div id="get-bla-and-esbl-genes" class="section level1">
 <h1>Get BLA and ESBL genes</h1>
-<pre class="r"><code>bla_genes &lt;- ESCrE_genotype_info$element_symbol_renamed%&gt;% unique %&gt;% sort
+<pre class="r"><code># Blactamase genes
+bla_genes &lt;- ESCrE_genotype_info$element_symbol_renamed%&gt;% unique %&gt;% sort
 paste0(&quot;Number of beta-lactamase genes identified: &quot; , length(ESCrE_genotype_info$element_symbol_renamed %&gt;% unique))</code></pre>
 <pre><code>[1] &quot;Number of beta-lactamase genes identified: 50&quot;</code></pre>
 <pre class="r"><code>table(ESCrE_genotype_info$element_symbol_renamed,ESCrE_genotype_info$blactam_class) </code></pre>
@@ -722,7 +723,8 @@ paste0(&quot;Number of beta-lactamase genes identified: &quot; , length(ESCrE_ge
   blaTEM-1?*   1 0 0 0
   blaTEM-105?* 1 0 0 0
   blaTEM-214   1 0 0 0</code></pre>
-<pre class="r"><code>escre_genotypes &lt;- subset(ESCrE_genotype_info,ESCrE==T)
+<pre class="r"><code># ESCrE genes
+escre_genotypes &lt;- subset(ESCrE_genotype_info,ESCrE==T)
 ESCrE_genes = escre_genotypes$element_symbol_renamed %&gt;% sort %&gt;% unique
 paste0(&quot;ESCrE beta-lactamase genes identified: &quot; ,nrow(escre_genotypes)) </code></pre>
 <pre><code>[1] &quot;ESCrE beta-lactamase genes identified: 38&quot;</code></pre>
@@ -824,7 +826,7 @@ blaACT-131*
 blaACT-16
 </td>
 <td style="text-align:right;">
-3
+4
 </td>
 <td style="text-align:right;">
 0
@@ -1048,7 +1050,7 @@ blaEC
 blaEC-15*
 </td>
 <td style="text-align:right;">
-6
+7
 </td>
 <td style="text-align:right;">
 0
@@ -1090,7 +1092,7 @@ blaEC-5
 blaEC-5*
 </td>
 <td style="text-align:right;">
-60
+61
 </td>
 <td style="text-align:right;">
 0
@@ -1132,13 +1134,13 @@ blaOXY-1-11
 blaCTX-M-15
 </td>
 <td style="text-align:right;">
-34
+35
 </td>
 <td style="text-align:right;">
 32
 </td>
 <td style="text-align:right;">
-48.48
+47.76
 </td>
 </tr>
 <tr>
@@ -1177,10 +1179,10 @@ blaKPC-3
 1
 </td>
 <td style="text-align:right;">
-7
+8
 </td>
 <td style="text-align:right;">
-87.50
+88.89
 </td>
 </tr>
 <tr>
@@ -1299,13 +1301,21 @@ blaKPC-2
 </table>
 <pre class="r"><code>plasmidic_ESCrEs &lt;- subset(ESCrE_prop_data,prop_plasmid&gt;0) %&gt;% .$ESCrE %&gt;% sort
 
+paste0(&quot;Number of genes: &quot;,nrow(ESCrE_prop_data))</code></pre>
+<pre><code>[1] &quot;Number of genes: 38&quot;</code></pre>
+<pre class="r"><code>paste0(&quot;Number of plasmidic genes: &quot;,nrow(ESCrE_prop_data %&gt;% subset(prop_plasmid &gt;0)))</code></pre>
+<pre><code>[1] &quot;Number of plasmidic genes: 12&quot;</code></pre>
+<pre class="r"><code># Save
 saveRDS(ESCrE_prop_data,&quot;./data/ESBL_plasmids/MERLIN_cohort_ESCrE_proportion_plasmidic.RDS&quot;)
 
+# Generate plasmid presence
 ESCrE_plasmidic_presence &lt;- lapply(df$genomic_id,get_plasmidic_ESCrE,mobsuite_gene_pres,plasmidic_ESCrEs) %&gt;% do.call(rbind,.)</code></pre>
 </div>
 <div id="save-overall-data" class="section level1">
 <h1>Save overall data</h1>
-<pre class="r"><code>plasmid_data &lt;-  left_join(plasmid_data,ESCrE_plasmidic_presence) 
+<pre class="r"><code># Merge
+plasmid_data &lt;-  left_join(plasmid_data,ESCrE_plasmidic_presence) 
+# Save
 saveRDS(plasmid_data,&quot;./data/ESBL_plasmids/MERLIN_cohort_beta_lactam_location_data.RDS&quot;)</code></pre>
 </div>
 
