--- a/scripts/amrfinder/curate_amrfinder_results.html
+++ b/scripts/amrfinder/curate_amrfinder_results.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-31" />
+<meta name="date" content="2025-11-03" />
 
 <title>Curate the amrfinder results for these genomes</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">Curate the amrfinder results for these
 genomes</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-31</h4>
+<h4 class="date">2025-11-03</h4>
 
 </div>
 
@@ -376,7 +376,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
+                                                                                           &quot;msla0572.local&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -711,6 +711,9 @@ MERLIN_RE_8_amrfinder.out</code></pre>
 </div>
 <div id="load-and-curate-amrfinder-dataset" class="section level1">
 <h1>Load and curate amrfinder dataset</h1>
+</div>
+<div id="get-amrfinder-matrix" class="section level1">
+<h1>Get amrfinder matrix</h1>
 </div>
 
 
