--- a/scripts/dataset_curation/curate_final_metadata_index_qc_passing.html
+++ b/scripts/dataset_curation/curate_final_metadata_index_qc_passing.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-31" />
+<meta name="date" content="2025-11-03" />
 
 <title>Data Cleaning Step 8 - Curate final metadataset of specimens from index subjects</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">Data Cleaning Step 8 - Curate final
 metadataset of specimens from index subjects</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-31</h4>
+<h4 class="date">2025-11-03</h4>
 
 </div>
 
@@ -376,7 +376,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
+                                                                                           &quot;msla0572.local&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -419,16 +419,19 @@ loaded via a namespace (and not attached):
 [29] vctrs_0.6.5        evaluate_1.0.5     glue_1.8.0         farver_2.1.2      
 [33] rmarkdown_2.29     tools_4.5.1        pkgconfig_2.0.3    htmltools_0.5.8.1 </code></pre>
 </div>
-<div id="load-data-and-restrict-to-isolates-from-index-subject" class="section level1">
-<h1>Load data and restrict to isolates from index subject</h1>
+<div id="load-data" class="section level1">
+<h1>Load data</h1>
 <pre class="r"><code># Overall dataset
 df &lt;- readRDS(&quot;/Users/kgontjes/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS&quot;)
-paste0(&quot;Number of overall isolates: &quot;,nrow(df))</code></pre>
-<pre><code>[1] &quot;Number of overall isolates: 260&quot;</code></pre>
+paste0(&quot;Number of metadata entries: &quot;, nrow(df))</code></pre>
+<pre><code>[1] &quot;Number of metadata entries: 260&quot;</code></pre>
+</div>
+<div id="restrict-dataset-to-qc-passing-index-isolates" class="section level1">
+<h1>Restrict dataset to QC passing index isolates</h1>
 <pre class="r"><code># QC passing ESCrE genomes
 df_qc_passing &lt;-  df %&gt;% subset(qc_pass==&quot;TRUE&quot; &amp; WGS_escre==TRUE)
-paste0(&quot;Number of overall ESCrE qc-passing isolates: &quot;,nrow(df_qc_passing))</code></pre>
-<pre><code>[1] &quot;Number of overall ESCrE qc-passing isolates: 168&quot;</code></pre>
+paste0(&quot;Number of ESCrE qc-passing isolates: &quot;,nrow(df_qc_passing))</code></pre>
+<pre><code>[1] &quot;Number of ESCrE qc-passing isolates: 168&quot;</code></pre>
 <pre class="r"><code># Index isolates
 df_index &lt;- subset(df_qc_passing, index==TRUE)
 paste0(&quot;Number of index isolates: &quot;,nrow(df_index))</code></pre>
